--- a/.github/workflows/smoke-kafka.yml
+++ b/.github/workflows/smoke-kafka.yml
@@ -1,41 +1,60 @@
-name: Fineract Kafka Smoke
-
-on: [push, pull_request]
-
-permissions:
-  contents: read
-
 jobs:
   build:
-    runs-on: ubuntu-22.04
     env:
       GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_ACCESS_TOKEN }}
-
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4
-        with:
-          fetch-depth: 0
-      - name: Set up JDK 17
-        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4
-        with:
-          java-version: '17'
-          distribution: 'zulu'
-          cache: gradle
-      - name: Build the image
-        run: ./gradlew --no-daemon --console=plain :fineract-provider:clean :fineract-provider:build :fineract-provider:jibDockerBuild -x test -x cucumber
-      - name: Start the Kafka Stack
-        run: docker compose -f docker-compose-postgresql-kafka.yml up --scale fineract-worker=1 -d
-      - name: Wait for stack to come up
-        run: sleep 500
-      - name: Check the stack
-        run: docker ps
-      - name: Check health Manager
-        run: curl -f -k --retry 10 --retry-connrefused --connect-timeout 30 --retry-delay 30 https://localhost:8443/fineract-provider/actuator/health
-      - name: Check health Worker1
-        run: curl -f -k --retry 10 --retry-connrefused --connect-timeout 30 --retry-delay 30 https://localhost:8444/fineract-provider/actuator/health
-      - name: Check info Manager
-        run: (( $(curl -f -k --retry 5 --retry-connrefused --connect-timeout 30 --retry-delay 30 https://localhost:8443/fineract-provider/actuator/info | wc --chars) > 100 ))
-      - name: Check info Worker1
-        run: (( $(curl -f -k --retry 5 --retry-connrefused --connect-timeout 30 --retry-delay 30 https://localhost:8444/fineract-provider/actuator/info | wc --chars) > 100 ))
-      - name: Run Smoke Test with Remote COB
-        run: ./gradlew --no-daemon --console=plain :integration-tests:cleanTest :integration-tests:test --tests "org.apache.fineract.integrationtests.investor.externalassetowner.InitiateExternalAssetOwnerTransferTest.saleActiveLoanToExternalAssetOwnerAndBuybackADayLater" -PcargoDisabled
+    - continue-on-error: true
+      uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633
+      with:
+        fetch-depth: 0
+    - continue-on-error: true
+      name: Set up JDK 17
+      uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9
+      with:
+        cache: gradle
+        distribution: zulu
+        java-version: '17'
+    - continue-on-error: true
+      name: Build the image
+      run: ./gradlew --no-daemon --console=plain :fineract-provider:clean :fineract-provider:build
+        :fineract-provider:jibDockerBuild -x test -x cucumber
+    - continue-on-error: true
+      name: Start the Kafka Stack
+      run: docker compose -f docker-compose-postgresql-kafka.yml up --scale fineract-worker=1
+        -d
+    - continue-on-error: true
+      name: Wait for stack to come up
+      run: sleep 500
+    - continue-on-error: true
+      name: Check the stack
+      run: docker ps
+    - continue-on-error: true
+      name: Check health Manager
+      run: curl -f -k --retry 10 --retry-connrefused --connect-timeout 30 --retry-delay
+        30 https://localhost:8443/fineract-provider/actuator/health
+    - continue-on-error: true
+      name: Check health Worker1
+      run: curl -f -k --retry 10 --retry-connrefused --connect-timeout 30 --retry-delay
+        30 https://localhost:8444/fineract-provider/actuator/health
+    - continue-on-error: true
+      name: Check info Manager
+      run: (( $(curl -f -k --retry 5 --retry-connrefused --connect-timeout 30 --retry-delay
+        30 https://localhost:8443/fineract-provider/actuator/info | wc --chars) >
+        100 ))
+    - continue-on-error: true
+      name: Check info Worker1
+      run: (( $(curl -f -k --retry 5 --retry-connrefused --connect-timeout 30 --retry-delay
+        30 https://localhost:8444/fineract-provider/actuator/info | wc --chars) >
+        100 ))
+    - continue-on-error: true
+      name: Run Smoke Test with Remote COB
+      run: ./gradlew --no-daemon --console=plain :integration-tests:cleanTest :integration-tests:test
+        --tests "org.apache.fineract.integrationtests.investor.externalassetowner.InitiateExternalAssetOwnerTransferTest.saleActiveLoanToExternalAssetOwnerAndBuybackADayLater"
+        -PcargoDisabled
+name: Fineract Kafka Smoke
+on:
+  repository_dispatch:
+    types: trigger-ga___smoke-kafka.yml
+permissions:
+  contents: read
